<resources>
    <string name="app_name" translatable="false">Story App</string>
    <string name="story_image_description">Picture of the story</string>
    <string name="story_user_placeholder" translatable="false">John Doe</string>
    <string name="story_time_placeholder">a few minutes ago</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="logging_in">Logging in…</string>
    <string name="login_success">Login success</string>
    <string name="login_failed">Login failed, please try again.\nError Code: %1$s</string>
    <string name="register">Register</string>
    <string name="registering">Registering…</string>
    <string name="register_success">Register success</string>
    <string name="register_failed">Register failed, please try again.\nError Code: %1$s</string>
    <string name="upload">Upload</string>
    <string name="uploading">Uploading…</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_failed">Upload failed, please try again.\nError Code: %1$s</string>

    <string name="choose_a_picture">Choose a picture</string>
    <string name="capture_picture_failed">Capture picture failed</string>
    <string name="camera_failed">Camera failed to open</string>
    <string name="permission_not_granted">Permission not granted</string>

    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>

    <string name="fetch_stories_failed">Fetch stories failed.\nError Code: %1$s</string>

    <string name="tv_register_text">Don\'t have an account?</string>
    <string name="tv_login_text">Already have an account?</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_input">Not a valid input</string>
    <string name="appwidget_text">Stories</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Show stories</string>
    <string name="edt_description_input_hint">Write description here…</string>
    <string name="btn_upload_story_text">Send Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="img_photo_preview_desc">Photo of the story</string>
    <string name="capture_photo">Capture photo</string>
    <string name="switch_camera">Switch camera</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="fab_new_story_desc">Add new story</string>
    <string name="name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="story_description_placeholder" translatable="false">Lorem ipsum</string>
    <string name="stories">Stories</string>
    <string name="empty">Empty</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="a_moment_ago">a moment ago</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="ago">ago</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="map_id_light" translatable="false">7cad28883dc70418</string>
    <string name="map_id_dark" translatable="false">dfd9ada7429ce95b</string>
    <string name="info_window_click_message">Tap to view more…</string>
    <string name="placeholder_location" translatable="false">Surabaya, Indonesia</string>
    <string name="btn_location_text">Add location</string>
    <string name="remove">Remove</string>
    <string name="maps">Maps</string>
    <string name="refreshing">Refreshing…</string>
    <string name="location_not_found">Location not found. Try again.</string>
    <string name="fetch_stories_success">Showing %1$d stories.</string>
</resources>