<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/material_on_primary_emphasis_high_type">

    <TextView
        android:id="@+id/tv_username"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:text="@string/story_user_placeholder" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/material_on_background_emphasis_medium"
        android:text="@string/story_time_placeholder" />

    <androidx.legacy.widget.Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/tv_click_message"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:text="@string/info_window_click_message" />

</LinearLayout>