<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".views.main.StoryDetailActivity">

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:transitionName="photo"
        app:layout_constraintBottom_toTopOf="@+id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        android:contentDescription="@string/story_image_description" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextAppearance.AppCompat"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="username"
        android:layout_marginTop="8dp"
        android:text="@string/story_user_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/tv_description"
        app:layout_constraintEnd_toStartOf="@+id/tv_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_photo" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/story_time_placeholder"
        android:transitionName="time"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username"
        app:layout_constraintEnd_toStartOf="@+id/tv_location"
        app:layout_constraintStart_toEndOf="@+id/tv_username"
        app:layout_constraintTop_toTopOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/placeholder_location"
        android:transitionName="location"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_time"
        app:layout_constraintTop_toTopOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_description"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/story_description_placeholder"
        android:transitionName="description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />
</androidx.constraintlayout.widget.ConstraintLayout>